# smart_task

./: .dockerignore  .env.example  .gitignore  .gitmodules  1.md  Dockerfile  LICENSE  README.md  concept.md  config.yaml  config_win.yaml  debug_adk.py  debug_tool_context.py  docker-compose.debug.yml  docker-compose.yml  entrypoint.sh  fastmcp.txt  find_tool_context.py  hello_a2a.txt  init_smart_task.sql  main.py  mcp_server.py  pyproject.toml  readable_eval_result.json  runtime_settings.json  smart_task.db  smoke_signal.txt  test.ps1  tmp_check_db.py
.claude/: settings.local.json
agents/: .env.example  __init__.py  agent.py  dispatcher_agent.py  main.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
dashboard_v2/: package-lock.json  package.json
docs/: architecture_design.md
evals/: inference_eval_config.json  root_dispatch.evalset.json  time_eval_config.json
frontend/: package-lock.json  package.json
hub/: Dockerfile  agent.py  pyproject.toml
memory-bank/: projectbrief.md
scripts/: check_project_status.py  generate_agent_cards.py  get_notion_datasource_id.py  migrate_notion_to_logseq.py  reliable_audit.py  setup_agent_engine.py  setup_db.py  start_api_server.ps1  start_api_server_a2a.ps1  start_remote_agents.ps1  start_root_agent.ps1  start_web_debug.ps1  sync_agents_to_db.py  sync_notion_schema.py  test_express_mode.py
smart_task_app/: __init__.py  agent.py  design_v2.md  main.py
src/: Dockerfile  dashboard_api.py  db.py  engine.py  entrypoint.sh  init_all.sql  main.py  scheduler.py  server.py  tools.py  (+1 more)
(+240 files in other folders)
